fix for Chrome showing scrollbars in windows

--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -29,6 +29,7 @@ nav > ul {
   flex-grow: 1;
   overflow: scroll;
   width: 100%;
+  overflow: hidden;
 }
 
 li a {
